# datagov-agent

./: .env.example  .gitignore  Makefile  Plan de Proyecto DataGov Agent.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  mdm_agent.py  metadata_agent.py  profiler_agent.py  prompts.py  quality_agent.py  rag_agent.py  recommendation_agent.py  report_agent.py  supervisor.py
app/api/: routes_data.py  routes_rag.py  routes_reports.py  store.py
app/graph/: __init__.py  nodes.py  state.py  workflow.py
app/schemas/: __init__.py  data_schema.py  quality_schema.py  report_schema.py
app/services/: __init__.py  data_dictionary.py  data_loader.py  dataset_validation.py  embeddings.py  entities.py  llm.py  mdm.py  profiler.py  quality_rules.py  report_generator.py  vector_store.py
app/utils/: __init__.py  file_utils.py  logging.py  text_cleaning.py
data/documents/: 01_politica_gobierno_datos.md  02_manual_calidad_datos.md  03_glosario_negocio.md  04_matriz_roles_datos.md  05_politica_datos_personales.md  (+5 more)
datagov_agent_dataset/: README.md  data_catalog_datagov_agent.xlsx
docs/: COMANDOS_INICIO.md  EXPLICACION_TECNICA.md  MANUAL_DEMO.md  MANUAL_DESPLIEGUE.md  architecture.md  data_dictionary.md  demo_script.md  project_plan.md  prompts.md
notebooks/: 01_generate_synthetic_data.ipynb  02_test_quality_rules.ipynb
scripts/: validate_dataset.py
tests/: conftest.py  test_dataset_expected.py  test_mdm.py  test_profiler.py  test_quality.py  test_rag.py
ui/: streamlit_app.py
(+23 files in other folders)
