[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagov-agent"
version = "0.1.0"
description = "Asistente agéntico local para gobierno, calidad, MDM y catalogación de datos"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "DWConsulware" }]
keywords = ["data-governance", "data-quality", "mdm", "rag", "langgraph", "ollama", "milvus"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "notebooks", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''/(\.venv|notebooks|data)/'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
